// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 36,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 90,
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 48,
            "lineHeight": 60,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item with  textFont 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopLeftRadius": 36,
        "borderTopRightRadius": 36,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 45,
            "lineHeight": 57,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item with !selected 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomLeftRadius": 36,
        "borderBottomRightRadius": 36,
        "borderTopColor": "#D1D4DB",
        "borderTopWidth": 3,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 24,
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 45,
            "lineHeight": 57,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    needsOffscreenAlphaCompositing={true}
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "aspectRatio": 1,
          "backgroundColor": "transparent",
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 33,
          "borderWidth": 6,
          "justifyContent": "center",
          "width": 66,
        }
      }
      value="title"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item with disabled 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 36,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 90,
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#9BA1B0",
            "fontFamily": "Inter-Medium",
            "fontSize": 48,
            "lineHeight": 60,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item with leftIcon 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 36,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 90,
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#EEEFF1",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <View
      style={
        {
          "paddingRight": 36,
        }
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 72,
          }
        }
      >
        
      </Text>
    </View>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#2B78EE",
            "fontFamily": "Inter-Medium",
            "fontSize": 48,
            "lineHeight": 60,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly Item with selected 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 36,
        "flexDirection": "row",
        "justifyContent": "center",
        "marginBottom": 24,
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#20242D",
            "fontFamily": "Inter-Regular",
            "fontSize": 48,
            "lineHeight": 60,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "maxWidth": "100%",
          "opacity": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "borderColor": "rgba(32, 36, 45, 0.3)",
          "borderRadius": 12,
          "borderWidth": 0,
          "height": 60,
          "width": 60,
        }
      }
      value="title"
    >
      <SvgMock
        height={60}
        width={60}
      />
    </View>
  </View>
</View>
`;

exports[`@npm/mobydick-core/ActionSheetBase should renders correctly inner item 1`] = `
<View
  accessibilityLabel="accessibilityLabelActionSheetsItem"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderTopColor": "#D1D4DB",
        "borderTopWidth": 3,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginHorizontal": 24,
        "minHeight": 150,
        "paddingHorizontal": 60,
      },
      {
        "backgroundColor": "#FFF",
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#FFF",
            "fontFamily": "Inter-Regular",
            "fontSize": 45,
            "lineHeight": 57,
          },
          {
            "paddingVertical": 45,
          },
        ]
      }
    >
      title
    </Text>
  </View>
</View>
`;
